tests/invalid/wrong_type_arity.err_exp
wrong_type_arity.m:032: In declaration of predicate `q'/2:
wrong_type_arity.m:032:   error: the type [38;5;87m`t1'/0[39;49m is [38;5;203mundefined.[39;49m
wrong_type_arity.m:032:   (There is a type named `t1' with arity [38;5;40m1.[39;49m)
wrong_type_arity.m:038: In declaration of predicate `r'/2:
wrong_type_arity.m:038:   error: the type [38;5;87m`t2'/0[39;49m is [38;5;203mundefined.[39;49m
wrong_type_arity.m:038:   (There are types named `t2' with arities [38;5;40m1,[39;49m [38;5;40m2[39;49m and [38;5;40m3.[39;49m)
